--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 
 <head>
 
+<title>ADD Simulator</title>
+
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.0/jquery.min.js"></script>
 <script type="text/javascript" src="http://www.big5apps.com/api/bigfive.js"></script>
 <script type="text/javascript">
 
-var tasks = ['Facebook', 'Twitter'];
+var tasks = ['Facebook', 'Twitter', 'Email', 'Digg', 'iTunes', 'iChat'];
 
 $(document).ready(function() {
 	vibrate();
@@ -37,7 +39,11 @@ function randEl(arr) {
 <style type="text/css">
 
 html {
+	background: #000000;
 	font-family: Helvetica, sans-serif; }
+
+h1 {
+	color: #FFFFFF; }
 
 </style>
 
